# quarian-voice-filter

./: .gitignore  Cargo.toml  LICENSE  MAP.md  README.md
.github/workflows/: release.yml
cli/: Cargo.toml
cli/src/: main.rs
crates/quarian-voice-filter/: Cargo.toml
crates/quarian-voice-filter/src/: dsp.rs  error.rs  lib.rs
crates/quarian-voice-filter/tests/: regression.rs
docs/: librosa-pitch-analysis.md
gui/: Cargo.toml
gui/src/: main.rs
lib/: Cargo.toml
lib/src/: dsp.rs  filters.rs  lib.rs  params.rs  phase_vocoder.rs  pitch.rs  resample.rs  stft.rs  wav.rs
tests/: Cargo.toml  lib.rs  regression.rs
tests/fixtures/python-baseline/: README.md
tools/: generate_python_baseline.py
