[workspace]
members = [
    "lib",
    "cli",
    "gui",
    "tests",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
rust-version = "1.96.0"
version = "1.0.0"

[workspace.dependencies]
chrono = "0.4"
egui = "0.34"
eframe = "0.34"
rfd = "0.17"
quarian-voice-filter = { path = "lib" }
