[package]
name = "quarian-voice-filter-gui"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "GUI for the quarian-voice-filter library"

[dependencies]
eframe.workspace = true
egui.workspace = true
quarian-voice-filter.workspace = true
