[package]
name = "quarian-voice-filter-tests"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[lib]
path = "lib.rs"

[dependencies]
quarian-voice-filter.workspace = true
hound = "3.5"
rustfft = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[test]]
name = "regression"
path = "regression.rs"
